Fixed text overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ canvas {
 	position:fixed;
 	border:0;
 	padding:15px;
-	width:452px;
+	width:480px;
 	height:60px;
 	bottom:0px;
 	left:50%;;
